[tool.poetry]
name = "djangoflutterwave_example"
version = "0.1.0"
description = ""
authors = ["bdelate <brendon.delate@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6 <4"
Django = "^3.1.4"
djangoflutterwave = { path="../", develop = true }

[tool.poetry.dev-dependencies]
black = {version = "=19.3b0",allow-prereleases = true}
mypy = "^0.720.0"
twine = "^1.13"
coverage = "^4.5"
django-extensions = "^2.2"
jupyter = "^1.0"
factory-boy = "^2.12"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
